--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react-native": "^0.72.8",
     "axios": "^1.6.1",
     "expo": "^49.0.3",
     "expo-constants": "~14.4.2",
